@@ -1,5 +1,5 @@
 STR_LANGUAGE				{简体中文}
-STR_LANGCODE				{\0x0B}
+STR_LANGCODE				{\x0B}
 
 STR_LANG					{语言}
 STR_LANG_DESC				{选择你的语言.}
