@@ -1,5 +1,6 @@
 TO DO :
 Fix : Shortcut pkg
+Add : MultiContent PKGDIR/PS3_GMXX/PK3_EXTRA
 
 v1.39
 Fix : Display issue with game title containing new line character '\n'.
